[package]
name = "portfwd"
version = "1.0.0"
authors = ["zhyhang<zhyhang1978@gmail.com>"]
description="Foward local port to remote port, can establish multi-tunnels."
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio={version="0.8.4", features=["os-poll","net"]}
num_cpus = "1.13.1"
clap = { version = "3.2.17", features = ["derive"] }

[features]
